# RE4001-Renaissance-Capstone-Project

./: .gitignore  README.md
ESP32_LoRa_RX/: platformio.ini
ESP32_LoRa_RX/src/: data_structs.h  http.h  laptop.py  main.cpp
Misc_Reference_Code/ESP32_SPI_Slave_Test/: platformio.ini
Misc_Reference_Code/ESP32_SPI_Slave_Test/src/: main.cpp
Misc_Reference_Code/Pico-SPI-2/: platformio.ini
Misc_Reference_Code/battery/battery/: battery.ino
Misc_Reference_Code/chinaso2/: chinaso2.ino
Misc_Reference_Code/co2/: co2.ino
Misc_Reference_Code/dashboard/templates/: base.html  loadavg.html
RCP ESP32 V2/: platformio.ini
RCP ESP32 V2/src/: main.cpp
RCP Pico/: platformio.ini
RCP Pico/src/: main.cpp
battery/battery/: battery.ino
dashboard/: laptop.py  test.py  test2.py
dashboard/templates/: base.html  frontend.html  index.html  loadavg.html
dashboard2/: dashboard_data.csv  laptop2.py  laptop2py  requirements.txt
dashboard2/frontend/: package-lock.json  package.json
data_scripts/: bslog_parser.py
esp32_master_slave/ESP32_SPI/: platformio.ini
esp32_master_slave/ESP32_SPI_Slave/: CMakeLists.txt  platformio.ini
esp32_master_slave_rx/ESP32_SPI/: platformio.ini
esp32_master_slave_rx/ESP32_SPI_Slave/: platformio.ini  sdkconfig.firebeetle32
gps_3in1/src/: main.cpp
imu_thermo_gravity/allSensors/: allSensors.ino
sdcard/: sdcard.ino  sdcard_with_rtc.ino
spi/esp32_spi_test_sketch/: esp32_spi_master_sketch.ino  esp32_spi_test_sketch.ino
spi/pico-spi/: CMakeLists.txt  README.adoc
spi/pico-spi/spi_slave/: CMakeLists.txt  spi_slave.c
(+56 files in other folders)
